# anolis

./: .clang-tidy  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CLANG_TIDY_FIRST_PASS_CHECKLIST.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  WORKFLOWS.TEMP  anolis-runtime-telemetry.yaml  anolis-runtime-test.yaml  anolis-runtime.yaml  clang-tidy-summary.txt  clang-tidy.txt  debug_session.ipynb  getparameter_crash_investigation.md  mypy.ini  phase_9_plan.md  pyproject.toml  requirements-lock.txt  requirements.txt  scenario_debugging_summary.md  tsan_integration_tests.txt  vcpkg-configuration.json  vcpkg.json  version-locations.txt
.ci/: change-checklist-template.md  compatibility-matrix.yml  dependency-pins.yml  phase-checklist-template.md
.github/workflows/: ci.yml  content.yml  docs.yml  extended.yml  metrics.yml  quality.yml  release.yml  sanitizers.yml  static-analysis.yml  tsan.yml
behaviors/: bioreactor_stir_feed.xml  demo.xml  test_noop.xml
cmake/: Warnings.cmake
config/: anolis-runtime-telemetry.yaml
config/bioreactor/: README.md  anolis-runtime.bioreactor.automation.yaml  anolis-runtime.bioreactor.full.yaml  provider-bread.bioreactor.yaml
config/mixed-bus-providers/: README.md  anolis-runtime.mixed.win.mock.yaml  anolis-runtime.mixed.yaml
core/: CMakeLists.txt  anolis_build_config.hpp.in
core/automation/: README.md  bt_nodes.cpp  bt_nodes.hpp  bt_nodes_sanity.cpp  bt_runtime.cpp  bt_runtime.hpp  bt_services.hpp  mode_manager.cpp  mode_manager.hpp  parameter_manager.cpp  parameter_manager.hpp  parameter_types.hpp  parameter_value_bridge.hpp
core/control/: call_router.cpp  call_router.hpp
core/events/: event_emitter.cpp  event_emitter.hpp  event_types.hpp
core/http/: errors.hpp  handlers.cpp  handlers.hpp  json.cpp  json.hpp  server.cpp  server.hpp
core/http/handlers/: control_handlers.cpp  device_handlers.cpp  state_handlers.cpp  system_handlers.cpp  utils.hpp
core/logging/: logger.cpp  logger.hpp
core/provider/: framed_stdio_client.cpp  framed_stdio_client.hpp  i_provider_handle.hpp  provider_config.hpp  provider_handle.cpp  provider_handle.hpp  provider_process.cpp  provider_process.hpp  provider_registry.cpp  provider_registry.hpp  provider_supervisor.cpp  provider_supervisor.hpp
core/registry/: device_registry.cpp  device_registry.hpp
core/runtime/: config.cpp  config.hpp  ownership_validation.cpp  ownership_validation.hpp  runtime.cpp  runtime.hpp  signal_handler.cpp  signal_handler.hpp
core/src/: main.cpp
core/state/: state_cache.cpp  state_cache.hpp
core/telemetry/: influx_sink.cpp  influx_sink.hpp
docs/: CONTRIBUTING.md  README.md  SAFETY.md  architecture.md  automation-demo.md  automation.md  concept.md  configuration-schema.md  configuration.md  dependencies.md  getting-started.md  http-api.md  index.md  local-verification.md  providers.md  safety.md  safety_f.md
docs/contracts/: README.md  composer-control-baseline.md  machine-profile-baseline.md  runtime-config-baseline.md  runtime-http-baseline.md  telemetry-timeseries-baseline.md
docs/http/: README.md  openapi.v0.yaml
docs/workbench/: operate-parity-matrix.md  operator-ui-retirement-go-no-go.md  operator-ui-to-workbench-migration-runbook.md
examples/: anolis-runtime-telemetry.yaml
observability/: .env.example  TESTING.md  docker-compose.observability.yml  test-telemetry.ps1  test-telemetry.sh
scenarios/: README.md  __init__.py  base.py  happy_path_end_to_end.py  mode_blocking_policy.py  multi_device_concurrency.py  precondition_enforcement.py  provider_restart_recovery.py  slow_sse_client_behavior.py  telemetry_on_change.py  test_infrastructure.py
schemas/: README.md
schemas/http/: README.md
schemas/tools/: README.md  composer-control.openapi.v1.yaml
scripts/: README.md  build.ps1  build.sh  dev.ps1  dev.sh  examples_http.ps1  examples_http.sh  format_cpp.ps1  format_cpp.sh  run.ps1  run.sh  run_scenarios.py  setup.ps1  setup.sh  summarize_clang_tidy.py  summarize_tsan_log.py  test.ps1  test.sh  test_all.py  test_automation.py  test_http.py  test_phase3.py  test_phase4_http.py  test_simulation_devices.py  validate_lockfile.py  verify-local.sh
spec/device-provider/: README.md  protocol.proto  semantics.md
tests/: __init__.py  call_router_test.cpp  conftest.py  state_cache_test.cpp
tests/integration/: __init__.py  automation_suite.py  concurrency_stress_suite.py  core_suite.py  crashable_provider.py  http_suite.py  process_cleanup_suite.py  provider_config_suite.py  provider_supervision_suite.py  signal_fault_injection_suite.py  signal_handling_suite.py  simulation_devices_suite.py  test_all.py  test_automation.py  test_concurrency_stress.py  test_core.py  test_fixtures.py  test_helpers.py  test_http.py  test_integration.py  test_process_cleanup.py  test_provider_config.py  test_provider_supervision.py  test_signal_handling.py  test_simulation_devices.py  test_telemetry_export_service_e2e.py  test_telemetry_export_service_unit.py  validate_signal_fault_injection.py
tests/mocks/: mock_mode_manager.hpp  mock_provider_handle.hpp
tests/scenarios/: OPERATOR_WORKFLOW.md  README.md  __init__.py  base.py  fault_to_manual_recovery.py  happy_path_end_to_end.py  mode_blocking_policy.py  mode_safety.py  multi_device_concurrency.py  override_policy.py  parameter_validation.py  precondition_enforcement.py  provider_restart_recovery.py  run_scenarios.py  slow_sse_client_behavior.py  telemetry_on_change.py  test_infrastructure.py  test_scenarios.py
tests/unit/: CMakeLists.txt  bt_nodes_test.cpp  bt_runtime_test.cpp  call_router_test.cpp  config_test.cpp  device_registry_concurrency_test.cpp  event_emitter_test.cpp  http_handlers_test.cpp  influx_sink_test.cpp  main.cpp  mode_manager_test.cpp  parameter_types_test.cpp  provider_process_test.cpp  provider_registry_test.cpp  provider_supervisor_test.cpp  runtime_ownership_validation_test.cpp  sanity_test.cpp  state_cache_test.cpp
tests/unit/mocks/: mock_mode_manager.hpp  mock_provider_handle.hpp
tools/: package.py  validate-doc-links.py  verify-local.sh
(+140 files in other folders)
